    correct option syntax, thanks to Matthias Julius (Closes: #381186).
  * sbuild:
    - dsc_md5sums: Return hashref on failure, rather than -1.
    - verify_md5sums: Only run md5sum if there is one or more md5sum to
      verify, to prevent md5sum waiting forever on stdin if there are no
      files to check.  Thanks to Daniel Stone.

 -- Roger Leigh <rleigh@debian.org>  Sat, 12 Aug 2006 12:24:34 +0100

sbuild (0.49) unstable; urgency=low

  * Sbuild/Conf.pm: init checks if APT_CONFIG and DEBIAN_FRONTEND are
    being stripped from the environment by sudo (when running in split
    mode), and aborts with instructions for correctly configuring sudo.
    This prevents apt-get silently using the configuration from the host
    system instead of the chroot.
  * Sbuild/Chroot.pm: When running in split mode, use the -s option of
    su to set the shell used inside the chroot to /bin/sh.  This
    ensures that a valid shell is always used when the $SHELL is not
    available inside the chroot (Closes: 378283).
  * sbuild.conf, sbuild.conf.local, update-sourcedeps, sbuild.1.in,
    avg-pkg-build-time.1.in: Update to use the new configuration file
    locations.

 -- Roger Leigh <rleigh@debian.org>  Sat, 15 Jul 2006 23:42:09 +0100

sbuild (0.48) unstable; urgency=low

  * Sbuild/Chroot.pm: Use su, rather than sudo, inside the chroot.  This
    prevents the APT_CONFIG and DEBCONF_FRONTEND environment variables
    from being removed (Closes: #376020).
  * Sbuild/Conf.pm: Add $Sbuild::Conf::su.
  * sbuild-setup.7.in: Remove sudo configuration inside the chroot, now
    this is no longer required.

 -- Roger Leigh <rleigh@debian.org>  Sun,  9 Jul 2006 18:18:33 +0100

sbuild (0.47) unstable; urgency=low

  * bin/checkchroot: Correct uninitialised value warnings due to using an
    undefined variable (Closes: #369709).
  * bin/chrapt, bin/updatechroot, bin/upgradechroot: When chroot_mode is
    "schroot", chdir to / to ensure the CWD exists inside the chroot.