@@ -8,8 +8,10 @@ sbuild (0.50) UNRELEASED; urgency=low
     - verify_md5sums: Only run md5sum if there is one or more md5sum to
       verify, to prevent md5sum waiting forever on stdin if there are no
       files to check.  Thanks to Daniel Stone.
+  * Sbuild.pm: Use new binNMU versioning scheme (+bn), taken from
+    wanna-build SVN.  Thanks to Clint Adams (Closes: #384137).
 
- -- Roger Leigh <rleigh@debian.org>  Sat, 12 Aug 2006 12:24:34 +0100
+ -- Roger Leigh <rleigh@debian.org>  Tue, 22 Aug 2006 22:42:07 +0100
 
 sbuild (0.49) unstable; urgency=low
 
